<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/categoryLBLB"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:layout_marginTop="2dp" />
                <Spinner
                    android:id="@+id/categoryId"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/nameLB"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="2dp" />
                <EditText
                    android:id="@+id/name"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/descriptionLB"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="2dp" />
                <EditText
                    android:id="@+id/description"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"/>
            </LinearLayout>

            <Button
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="20dp" />
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
